[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-chat-viewer"
version = "0.1.0"
description = "Browse OpenAI Codex CLI chat sessions in the terminal (TUI)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "monish" }]
keywords = ["openai", "codex", "cli", "tui", "chat", "sessions", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    # curses is stdlib on Linux/macOS; windows users need this:
    "windows-curses; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["hatch", "twine", "build"]

[project.scripts]
codex-chat = "codex_chat_viewer:cli_main"

[project.urls]
Homepage   = "https://github.com/Monishkumarvr/agent-history-mcp"
Repository = "https://github.com/Monishkumarvr/agent-history-mcp"
Issues     = "https://github.com/Monishkumarvr/agent-history-mcp/issues"

[tool.hatch.build.targets.wheel]
# single-file module
sources = ["."]
include = ["codex_chat_viewer.py"]
