[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-history-mcp"
version = "0.1.0"
description = "MCP server to search Codex CLI + Claude Code conversation history"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Monish" }]
keywords = ["mcp", "openai", "codex", "claude", "history", "search", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
]

[project.scripts]
agent-history-mcp = "codex_mcp.server:mcp.run"

[project.urls]
Homepage   = "https://github.com/Monishkumarvr/agent-history-mcp"
Repository = "https://github.com/Monishkumarvr/agent-history-mcp"
Issues     = "https://github.com/Monishkumarvr/agent-history-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["codex_mcp"]
